WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110166
Unregistered blob URLs have incorrect MIME type
https://bugs.webkit.org/show_bug.cgi?id=110166
Summary
Unregistered blob URLs have incorrect MIME type
Alexey Proskuryakov
Reported
2013-02-18 16:52:22 PST
BlobResourceHandle::notifyResponseOnError() creates a response with an empty MIME type. In Safari, this triggers a download.
Attachments
proposed fix
(2.02 KB, patch)
2013-02-18 16:54 PST
,
Alexey Proskuryakov
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-02-18 16:54:13 PST
Created
attachment 188962
[details]
proposed fix
Sam Weinig
Comment 2
2013-02-19 10:03:48 PST
Comment on
attachment 188962
[details]
proposed fix View in context:
https://bugs.webkit.org/attachment.cgi?id=188962&action=review
> Source/WebCore/ChangeLog:13 > + * platform/network/BlobResourceHandle.cpp: (WebCore::BlobResourceHandle::notifyResponseOnError): > + Pass an accurate MIME type.
Please explain why this is better.
Alexey Proskuryakov
Comment 3
2013-02-19 10:07:38 PST
Committed <
http://trac.webkit.org/changeset/143349
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug