        Unregistered blob URLs have incorrect MIME type         https://bugs.webkit.org/show_bug.cgi?id=110166

Reviewed by Sam Weinig.

        * page/SecurityOrigin.cpp: (WebCore::SecurityOrigin::shouldUseInnerURL): Added a FIXME.

        * platform/network/BlobResourceHandle.cpp: (WebCore::BlobResourceHandle::notifyResponseOnError):
        Pass an accurate MIME type (for a delegate to see).



Canonical link: https://commits.webkit.org/128536@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143349 268f45cc-cd09-0410-ab3c-d52691b4dbfc